--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=1234
-PGSQL_DATABASE=localhost
+PGSQL_HOST=localhost
 PGSQL_USER=postgres
 PGSQL_PASSWORD=1234
 PGSQL_DATABASE=python_flask_rest_api
